# mqtt

./: .clang-format  .gitignore  404.html  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  custom.css  format.sh  index.html  index.xml  robots.txt  sitemap.xml  vcpkg.json
.github/: clang-12.profile
.github/workflows/: ci.yml  formatting.yml  gh-pages.yml  linux.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
doc/: index.adoc  index.html
docs/: .gitignore  config.toml
docs/archetypes/: reference.md
docs/content/: _index.md
docs/content/reference/: _index.md  async_default_connectable_stream.md
docs/content/reference/stream/: _index.md  async_read.md  async_read_fixed_header.md  async_write.md  async_write_short.md  constructors.md  executor_type.md  get_executor.md  next_layer.md  next_layer_type.md  reset.md
docs/content/reference/v311/: _index.md
docs/content/reference/v311/client_stream/: _index.md  async_handshake.md  constructors.md  executor_type.md  get_executor.md  next_layer.md  next_layer_type.md
docs/layouts/partials/: logo.html
docs/static/: relearn.css
docs/themes/hugo-geekdoc/: README.md
docs/themes/hugo-geekdoc/i18n/: it.yaml  zh-cn.yaml
docs/themes/hugo-geekdoc/layouts/: 404.html
docs/themes/hugo-geekdoc/layouts/_default/: baseof.html  taxonomy.html  terms.html
docs/themes/hugo-geekdoc/layouts/_default/_markup/: render-heading.html
docs/themes/hugo-geekdoc/layouts/partials/: language.html  menu-bundle.html  menu-extra.html  menu-filetree.html  menu.html  page-header.html  search.html  site-footer.html  site-header.html
docs/themes/hugo-geekdoc/layouts/posts/: list.html  single.html
docs/themes/hugo-geekdoc/layouts/shortcodes/: hint.html  icon.html  img.html  toc-tree.html  toc.html
example/: CMakeLists.txt  stream_connect.cpp
examples/: CMakeLists.txt  client.cpp  client_stream_handshake.cpp  stream_connect.cpp
include/mqtt/: binary.hpp  byte_buffer.hpp  connect.hpp  error.hpp  fixed_header.hpp  message_view.hpp  qos.hpp  stream.hpp  will.hpp
include/mqtt/details/: bits.hpp
include/mqtt/details/stream/: read.hpp  read_buffer.hpp  varlen.hpp  write.hpp  write_buffer.hpp
include/mqtt/v311/: client_stream.hpp  connect_opts.hpp  will.hpp
include/mqtt/v311/details/: handshake.hpp
include/purple/: async_result.hpp  binary.hpp  byte_buffer.hpp  connection_event.hpp  error.hpp  message_view.hpp  packet_type.hpp  qos.hpp  stream.hpp
include/purple/details/: bits.hpp  wait_flag.hpp
include/purple/details/stream/: read.hpp  read_buffer.hpp  write.hpp  write_buffer.hpp
include/purple/tcp/: resolving_socket.hpp
include/purple/tcp/details/: resolve_connect.hpp  resolving_socket_impl.hpp
include/purple/v311/: client.hpp  client_stream.hpp  connect_message.hpp  connect_opts.hpp  subscribe_message.hpp  will.hpp
include/purple/v311/details/: client_impl.hpp  client_state_machine.hpp  handshake.hpp  ping.hpp  publish.hpp  subscribe.hpp
reference/: index.html  index.xml
reference/stream/: index.html  index.xml
reference/stream/async_read/: index.html
reference/stream/async_read_fixed_header/: index.html
reference/stream/async_write/: index.html
reference/stream/async_write_short/: index.html
reference/stream/constructors/: index.html
reference/stream/executor_type/: index.html
reference/stream/get_executor/: index.html
reference/stream/next_layer/: index.html
reference/stream/next_layer_type/: index.html
reference/stream/reset/: index.html
reference/v311/: index.html  index.xml
reference/v311/client_stream/: index.html  index.xml
reference/v311/client_stream/async_handshake/: index.html
reference/v311/client_stream/constructors/: index.html
reference/v311/client_stream/executor_type/: index.html
reference/v311/client_stream/get_executor/: index.html
reference/v311/client_stream/next_layer/: index.html
reference/v311/client_stream/next_layer_type/: index.html
search/: en.config.min.json  en.data.min.json
src/: connect.cpp
tags/: index.html  index.xml
tags/page/1/: index.html
test/: CMakeLists.txt
test/source/: purple_test.cpp  test_stream.hpp  v311_client.cpp
tests/: CMakeLists.txt  client_stream.cpp  stream.cpp  test_stream.hpp  v311_client.cpp
(+3 files in other folders)
